<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CircleActivity"
    android:padding="20dp"
    android:orientation="vertical">
    <EditText
        android:id="@+id/circle_first_number_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/circle_radius"
        android:gravity="top"
        android:inputType="number"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/circle_perimeter_view"
        android:text="@string/circle_perimeter"
        android:gravity="top"
        android:textSize="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/circle_square_view"
        android:text="@string/circle_square"
        android:gravity="top"
        android:textSize="20dp"
        />
    <Button
        android:id="@+id/circle_perimeter_btn"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/get_circle_perimeter"
        />
    <Button
        android:id="@+id/circle_square_btn"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/get_circle_square"
        />
</LinearLayout>