<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TriangleActivity"
    android:padding="20dp"
    android:orientation="vertical">
    <EditText
        android:id="@+id/triangle_first_number_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/triangle_first_number"
        android:gravity="top"
        android:inputType="numberDecimal"
        />
    <EditText
        android:id="@+id/triangle_second_number_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/triangle_first_number"
        android:gravity="top"
        android:inputType="numberDecimal"
        />
    <EditText
        android:id="@+id/triangle_third_number_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/triangle_first_number"
        android:gravity="top"
        android:inputType="numberDecimal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/triangle_perimeter_view"
        android:text="@string/triangle_perimeter"
        android:gravity="top"
        android:textSize="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/triangle_square_view"
        android:text="@string/triangle_square"
        android:gravity="top"
        android:textSize="20dp"
        />
    <Button
        android:id="@+id/triangle_perimeter_btn"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/get_perimeter"
        />
    <Button
        android:id="@+id/triangle_square_btn"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/get_square"
        />
</LinearLayout>